--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.13"
 httpx = "^0.27.2"
 pyyaml = "^6.0.2"
+fastapi = "^0.115.5"
+uvicorn = "^0.32.1"
 
 
 [build-system]
