--- a/log_config.yaml
+++ b/log_config.yaml
@@ -1,21 +1,34 @@
 version: 1
 disable_existing_loggers: False
+filters: {
+  correlation_id: {
+    (): 'asgi_correlation_id.CorrelationIdFilter',
+    uuid_length: 32,
+    default_value: '-',
+  }
+}
 formatters:
   default:
     # "()": uvicorn.logging.DefaultFormatter
-    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+    format: '%(asctime)s - [%(correlation_id)s] - %(name)s - %(levelname)s - %(message)s'
   access:
     # "()": uvicorn.logging.AccessFormatter
-    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+    format: '%(asctime)s - [%(correlation_id)s] - %(name)s - %(levelname)s - %(message)s'
 handlers:
   default:
     formatter: default
     class: logging.StreamHandler
     stream: ext://sys.stderr
+    filters: [
+      correlation_id
+    ]
   access:
     formatter: access
     class: logging.StreamHandler
     stream: ext://sys.stdout
+    filters: [
+      correlation_id
+    ]
 loggers:
   uvicorn.error:
     level: INFO
@@ -28,7 +41,7 @@ loggers:
       - access
     propagate: no
 root:
-  level: DEBUG
+  level: INFO
   handlers:
     - default
   propagate: no
