--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.115.5"
 uvicorn = "^0.32.1"
 beautifulsoup4 = "^4.12.3"
 asgi-correlation-id = "^4.3.4"
+locust = "^2.32.4"
 
 
 [build-system]
